fix collapse

--- a/src/app/features/dashboard/components/dashboard-detail/dashboard-detail.component.scss
+++ b/src/app/features/dashboard/components/dashboard-detail/dashboard-detail.component.scss
@@ -28,10 +28,10 @@ button {
   mat-toolbar-row {
     height: 48px;
     padding: 0px;
-    padding-left: 10px;
   }
 
   #dashboard-info {
+    margin-left: 10px;
     h2 {
       display: inline;
       font-size: 12pt;
@@ -57,6 +57,17 @@ button {
   }
 }
 
+.sidenav-toggle-container {
+  margin-top: 10px;
+  margin-left: -20px;
+  position: absolute;
+  z-index: 800 !important;
+  visibility: visible !important;
+  button {
+    color: white;
+  }
+}
+
 // #date-range {
 //     width: 230px;
 //     margin-left:10px;
@@ -78,5 +89,5 @@ button {
 }
 
 .mat-drawer {
-  padding: 5px;
+  padding: 5px 10px;
 }
